WIP: rework command queue handling